--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -70,6 +70,18 @@
             المحظورين
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/allreports">
+            <span data-feather="layers"></span>
+            ابلاغات
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/team">
+            <span data-feather="layers"></span>
+            فريقنا
+          </a>
+        </li>
       </ul>
 
 
