--- a/src/app/admin/component/reports-details/reports-details.component.html
+++ b/src/app/admin/component/reports-details/reports-details.component.html
@@ -2,7 +2,7 @@
 	<div class="container">
 			<!--bootstrap card with 3 horizontal images-->
 			<div class="row">
-				<div class="card col-md-4 col-lg-6">
+				<div class="card col-md-6 col-lg-6 col-sm-12" style="margin-top: 23px;">
 					<!-- <img class="card-img-top" src=
 "https://media.geeksforgeeks.org/wp-content/cdn-uploads/20190705124953/Left-SP2019.png"> -->
 					<div class="card-body" style="text-align: initial;" *ngFor="let item of reportData.report">
@@ -17,7 +17,7 @@
 					
 						
 				</div>
-				<div id="carouselExampleControls" class="carousel slide col-6" data-ride="carousel">
+				<div id="carouselExampleControls" class="carousel slide col-md-6 col-lg-6 col-sm-12" data-ride="carousel">
 					<div class="carousel-inner">
 					  <div class="carousel-item active" *ngFor="let image of images let i = index" [ngClass]="{'active': i == 0 }">
 					    <a [href]="image.file_name" target="_blank">
