--- a/src/app/admin/component/adminhome/adminhome.component.html
+++ b/src/app/admin/component/adminhome/adminhome.component.html
@@ -63,7 +63,7 @@
           <p style="font-size: 20px; color:#fff;"> معلقة</p>
 
         </div>
-        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center py-5 mt-2" style="background-color: #FF8876;border-radius:10px;flex-direction: column;" (click)="payed()">
+        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center py-5 mt-2" style="background-color: #FF8876;border-radius:10px;flex-direction: column;" >
           <p style="font-size: 25px; color:#fff;">{{payedAds}}</p>
           <p style="font-size: 20px; color:#fff;">  المدفوعه</p>
 
