--- a/src/app/components/userpayed-rented-ads/userpayed-rented-ads.component.html
+++ b/src/app/components/userpayed-rented-ads/userpayed-rented-ads.component.html
@@ -1,6 +1,37 @@
-<!-- <div class="col "
+<!--
+<div class="container">
+  <div class="card-body bg-light " routerLink="/details/{{advertisment.id}}">
+    <div class="container">
+      <div class="row ">
+
+        <div class="col px-3 py-2">
+          <div class="d-flex flex-row justify-content-between">
+
+            <p class="mb-2 text-muted">{{advertisment .type}}</p>
+            <div class="d-flex flex-row" *ngIf="advertisment .ratings_count>0">
+
+              <mat-icon style="font-size:large;">star</mat-icon>
+              <p>{{advertisment .ratings_avg_count}}</p>
+              <p>({{advertisment .ratings_count}})</p>
+            </div>
+
+          </div>
+          <h3 class="mb-0 title">{{advertisment .title}}</h3>
+          <h3 class="mb-0 price">{{advertisment .price}}جنيه</h3>
+          <div class="d-flex justify-content-between align-items-center ">
+            <small class="text-muted"> <span class="material-icons   ">location_on</span>
+              {{advertisment.address}}</small>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+</div> -->
+<div class="col "
           *ngFor="let item of allAdvert | paginate: { itemsPerPage: 9,totalItems:totalNumber, currentPage: page }">
           <app-cart [advertisment]="item"> </app-cart>
 
-        </div> -->
-<p>fffffffffffffffff</p>
+        </div>
