--- a/src/styles.css
+++ b/src/styles.css
@@ -20,10 +20,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
   height: 100vh;
 }
 .send{
-  padding: 15px 20px;
+  padding: 10px 10px;
   font-size: 16px;
   font-weight: 600;
-  border-radius: 20px;
+  border-radius: 1px;
   background: var(--secondColor);
   color: #ffff;
   border:none;
@@ -56,4 +56,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 .noData p {
 font-size: 2em;
 
+}
+
+.center
+{
+  text-align:center;
 }
