--- a/src/app/admin/component/admins/admins.component.html
+++ b/src/app/admin/component/admins/admins.component.html
@@ -65,11 +65,11 @@
                       
         </mat-paginator>
       </div>
-
-      <!-- <div class="justify-content-center align-items-center" *ngIf="loading">
+<!-- 
+       <div class="justify-content-center align-items-center" *ngIf="loading">
         <mat-spinner class="text-center w-50  mt-5 pt-5 " style="top: 30px;"></mat-spinner>
       
-      </div> -->
+      </div>  -->
 <!-- 
 <ng-template #template>
   <div class="modal-body text-center">
@@ -82,5 +82,5 @@
 
       
 <ng-template #alter >
- <h1 class="bg-light text-center">لا يوجد مستأجرين حاليا</h1>
+ <h1 class="bg-light text-center">لا يوجد مسؤولين  حاليا</h1>
 </ng-template>
