--- a/src/app/admin/component/adver-requests/adver-requests.component.html
+++ b/src/app/admin/component/adver-requests/adver-requests.component.html
@@ -15,45 +15,18 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="position" matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> title</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> الاعلان</th>
       <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="position" matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef> السعر </th>
-      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="position" matColumnDef="bedroom_num">
-      <th mat-header-cell *matHeaderCellDef> عدد الغرف</th>
-      <td mat-cell *matCellDef="let element"> {{element.bedroom_num}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="position" matColumnDef="level">
-      <th mat-header-cell *matHeaderCellDef> الطابق</th>
-      <td mat-cell *matCellDef="let element"> {{element.level}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="position" matColumnDef="beds_num">
-      <th mat-header-cell *matHeaderCellDef> عدد السرائر</th>
-      <td mat-cell *matCellDef="let element"> {{element.beds_num}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="position" matColumnDef="bathroom_num">
-      <th mat-header-cell *matHeaderCellDef> عدد الحمامات</th>
-      <td mat-cell *matCellDef="let element"> {{element.bathroom_num}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="position" matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> الوصف </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      <th mat-header-cell *matHeaderCellDef > التفاصيل</th>
+      <td mat-cell *matCellDef="let element"> <button type="button"  routerLink="" class="btn btn-secondary m-1"><span
+        class="material-icons">التفاصيل</span> </button> </td>
     </ng-container>
+
+   
     <!-- block Column -->
     <ng-container matColumnDef="accept">
       <th mat-header-cell *matHeaderCellDef> قبول</th>
