--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,19 +53,7 @@
     </div>
     <h2 class="text-center mt-3">الاعلانات </h2>
 
-    <div class="album py-5 ">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
-
-                <div class="col " *ngFor="let item of allAdvert | paginate: { itemsPerPage: 9,totalItems:totalNumber, currentPage: page }">
-                    <app-cart [advertisment]="item"> </app-cart>
-
-                </div>
-
-            </div>
-
-        </div>
-
+    
 
 
         <div class="album py-5 ">
@@ -83,7 +71,7 @@
 
         </div>
 
-
+<app-footer> </app-footer>
 
     </div>
     <div class="justify-content-center align-items-center" *ngIf="loading">
