--- a/src/app/shared/component/all-owner-history/all-owner-history.component.css
+++ b/src/app/shared/component/all-owner-history/all-owner-history.component.css
@@ -23,11 +23,18 @@
     color: #FE6F41;
 
   }
-.photo img{
+/* .photo img{
     width:100% ;
     height: 100%;
-    object-position:center ;
-    object-fit: cover;
-}
+  
+} */
+.avatar {
+  margin-top: 16px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
 
- 
+}
+@media (max-width: 768px) and  (min-width: 578px) {
+
+}
