--- a/src/app/shared/component/cart-details/cart-details.component.css
+++ b/src/app/shared/component/cart-details/cart-details.component.css
@@ -4,6 +4,15 @@
   max-width: 100%;
   overflow-x: hidden;
 }
+.title{
+  color:#FE6F41;
+
+}
+.ownerInfo{
+  color:#FE6F41;
+  font-weight: bolder;
+  font-size: larger;
+}
 /* Carousel base class */
 .carousel {
     margin-bottom: 4rem;
@@ -36,6 +45,10 @@
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
+    }
+
+    .photo{
+      text-align: center;
     }
   }
 
@@ -77,4 +90,31 @@
     margin: auto;
     width: 360px;
   }
+}
+
+.avatar {
+  margin-top: 16px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+
+}
+
+.line{
+  height: 3px;
+  width: 80%;
+ background-color: #FE6F41;
+}
+
+h1,h4  ,h3,h2 {
+  color: rgb(112, 109, 109);
+  font-weight: bold;
+}
+
+.decription{
+  
+  overflow-wrap: break-word;
+}
+*{
+  line-height: 1.5em;
 }
