--- a/src/app/shared/component/cart/cart.component.html
+++ b/src/app/shared/component/cart/cart.component.html
@@ -13,7 +13,7 @@
                 <p class="mb-2 text-muted">{{advertisment .type | type }}</p>
                 <div class="d-flex flex-row" *ngIf="advertisment .ratings_count>0">
                   <mat-icon style="font-size:large;">star</mat-icon>
-                  <p>{{advertisment .ratings_avg_count}}</p>
+                  <p>{{advertisment .ratings_avg_count | number : '1.1-1'}}</p>
                   <p>({{advertisment .ratings_count}})</p>
                 </div>
 
